--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.1'
 
+x-common-variables: &common-variables
+  REACT_APP_SERVER_PORT: 8000
+
 services:
   db:
     image: mysql:latest
@@ -24,8 +27,8 @@ services:
     volumes:
       - ./server_python:/server_python
     build:
-      context: .
-      dockerfile: ./server_python/DockerfilePython
+      context: ./server_python
+      dockerfile: ./DockerfilePython
     ports:
       - 8000:8000
     environment:
@@ -39,14 +42,14 @@ services:
   react:
     image: react
     build:
-      context: .
-      dockerfile: ./app/DockerfileReact
+      context: ./app
+      dockerfile: ./DockerfileReact
     ports:
       - 3000:3000
     environment:
-      << : *commont-variables
+      <<: *common-variables
     volumes:
       - ./app:/app
       - /app/node_modules
     depends_on:
-      - server
+      - server_python
