--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MYSQL_ROOT_PASSWORD=ynovpwd
 MYSQL_USER="root"
 MYSQL_DATABASE="ynov_ci"
 PORT = 3000
+
+MONGO_HOST=mongodb
+MONGO_URI=mongodb://mongodb:27017/database
+NODE_PORT=8000
