--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,6 @@
-# dependencies
-/app/node_modules
-/server_node/node_modules
-/server_python/__pycache__
-/.pnp
-.pnp.js
+# Ignore les dossiers node_modules
+node_modules/
+.env
 
-# testing
-/coverage
-
-# production
-/build
-/publics/docs
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Ignore les dossiers node_modules dans tous les sous-dossiers
+**/node_modules/
