--- a/docker-compose-fastapi.yml
+++ b/docker-compose-fastapi.yml
@@ -1,8 +1,5 @@
 version: '3.1'
 
-x-common-variables: &common-variables
-  REACT_APP_SERVER_PORT: 8000
-
 services:
   db:
     image: mysql:latest
@@ -10,8 +7,6 @@ services:
     restart: always
     environment:
     - MYSQL_ROOT_PASSWORD
-    ports:
-      - 3306:3306
     volumes:
       - ./sqlfiles:/docker-entrypoint-initdb.d
   adminer:
@@ -33,23 +28,22 @@ services:
       - 8000:8000
     environment:
       - MYSQL_HOST=db
-      - MYSQL_DATABASE
-      - MYSQL_USER
-      - MYSQL_ROOT_PASSWORD
-      - PORT=8000
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     depends_on:
       - db
-  react:
-    image: react
-    build:
-      context: ./app
-      dockerfile: ./DockerfileReact
-    ports:
-      - 3000:3000
-    environment:
-      <<: *common-variables
-    volumes:
-      - ./app:/app
-      - /app/node_modules
-    depends_on:
-      - server_python
+#  react:
+#    image: react
+#    build:
+#      context: ./app
+#      dockerfile: ./DockerfileReact
+#    ports:
+#      - 3000:3000
+#    environment:
+#      <<: *common-variables
+#    volumes:
+#      - ./app:/app
+#      - /app/node_modules
+#    depends_on:
+#      - server_python
