projet python connexion react to server

--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@ MYSQL_USER="root"
 MYSQL_DATABASE="ynov_ci"
 PORT = 3000
 
+PASS_SERVER=toto
+
 MONGO_HOST=mongodb
 MONGO_URI=mongodb://mongodb:27017/database
 NODE_PORT=8000
+
+SERVER_PYTHON_URI=http://localhost:8000
