--- a/docker-compose-fastapi.yml
+++ b/docker-compose-fastapi.yml
@@ -3,6 +3,7 @@ version: '3.1'
 services:
   db:
     image: mysql:latest
+    container_name: db
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
@@ -10,6 +11,7 @@ services:
     volumes:
       - ./sqlfiles:/docker-entrypoint-initdb.d
   adminer:
+    container_name: adminer
     depends_on:
       - db
     image: adminer
@@ -17,6 +19,7 @@ services:
     ports:
       - 8080:8080
   server_python:
+    container_name: server_python
     restart: always
     image: python
     volumes:
