chore: Update database configuration in .env and docker-compose files

--- a/.env
+++ b/.env
@@ -1,12 +1,8 @@
-MYSQL_ROOT_PASSWORD=ynovpwd
-MYSQL_USER="root"
-MYSQL_DATABASE="ynov_ci"
-PORT = 3000
+DB_ROOT_USER=root
+DB_ROOT_PASSWORD=ynovpwd
+DB_DATABASE=ynov_ci
 
-PASS_SERVER=toto
-
-MONGO_HOST=mongodb
-MONGO_URI=mongodb://mongodb:27017/database
-NODE_PORT=8000
+ADMIN_PASS=toto
 
 SERVER_PYTHON_URI=http://localhost:8000
+SERVER_MONGO_URI=mongodb://mongo:27017/ynov_ci
