--- a/docker-compose-fastapi.yml
+++ b/docker-compose-fastapi.yml
@@ -31,10 +31,10 @@ services:
       - 8000:8000
     environment:
       - MYSQL_HOST=db
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - PASS_SERVER=${PASS_SERVER}
+      - MYSQL_DATABASE=${DB_DATABASE}
+      - MYSQL_USER=${DB_ROOT_USER}
+      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
+      - ADMIN_PASS=${ADMIN_PASS}
     depends_on:
       - db
   react:
