--- a/docker-compose-fastapi.yml
+++ b/docker-compose-fastapi.yml
@@ -7,7 +7,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-    - MYSQL_ROOT_PASSWORD
+    - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
     volumes:
       - ./sqlfiles:/docker-entrypoint-initdb.d
   adminer:
@@ -33,7 +33,7 @@ services:
       - MYSQL_HOST=db
       - MYSQL_DATABASE=${DB_DATABASE}
       - MYSQL_USER=${DB_ROOT_USER}
-      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD},
       - ADMIN_PASS=${ADMIN_PASS}
     depends_on:
       - db
@@ -47,7 +47,10 @@ services:
     ports:
       - 3000:3000
     environment:
-      - REACT_APP_API_URL=${SERVER_PYTHON_URI}
+      - MYSQL_USER = ${DB_ROOT_USER}
+      - MYSQL_PASSWORD = ${DB_ROOT_PASSWORD}
+      - MYSQL_DATABASE = ${DB_DATABASE}
+      - MYSQL_HOST = db
     volumes:
       - ./app:/app
       - /app/node_modules
