--- a/docker-compose-fastapi.yml
+++ b/docker-compose-fastapi.yml
@@ -47,10 +47,7 @@ services:
     ports:
       - 3000:3000
     environment:
-      - MYSQL_USER = ${DB_ROOT_USER}
-      - MYSQL_PASSWORD = ${DB_ROOT_PASSWORD}
-      - MYSQL_DATABASE = ${DB_DATABASE}
-      - MYSQL_HOST = db
+      - REACT_APP_API_URL=http://localhost:8000
     volumes:
       - ./app:/app
       - /app/node_modules
