--- a/docker-compose-fastapi.yml
+++ b/docker-compose-fastapi.yml
@@ -6,6 +6,8 @@ services:
     container_name: db
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    ports:
+      - 3306:3306
     environment:
     - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
     volumes:
@@ -33,7 +35,7 @@ services:
       - MYSQL_HOST=db
       - MYSQL_DATABASE=${DB_DATABASE}
       - MYSQL_USER=${DB_ROOT_USER}
-      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD},
+      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
       - ADMIN_PASS=${ADMIN_PASS}
     depends_on:
       - db
