--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,18 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '16'
+
     - name: Install dependencies
       run: npm install
-      working-directory: /app
+      working-directory: ./app
+
     - name: Run tests
       run: npm test
-      working-directory: /app
+      working-directory: ./app
