--- a/docker-compose-node.yml
+++ b/docker-compose-node.yml
@@ -52,23 +52,22 @@ services:
     depends_on:
       - mongo
 
-#  react:
-#    image: react
-#    container_name: react
-#    build:
-#      context: ./app
-#      dockerfile: DockerfileReact
-#    ports:
-#      - 3000:3000
-#    environment:
-#      - REACT_APP_SERVER_PORT=8000
-#    volumes:
-#      - ./app:/app
-#      - /app/node_modules
-#    depends_on:
-#      - server_node
-#    command: npm start
-#
+  react:
+    restart: always
+    image: react
+    container_name: react
+    build:
+      context: ./app
+      dockerfile: ./DockerfileReact
+    ports:
+      - 3000:3000
+    environment:
+      - REACT_APP_API_URL=http://localhost:8000
+    volumes:
+      - ./app:/app
+      - /app/node_modules
+    depends_on:
+      - server_node
 
 volumes:
   mongo-data:
