--- a/app/package.json
+++ b/app/package.json
@@ -55,6 +55,13 @@
         "lines": 80,
         "statements": 80
       }
+    },
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
     }
+  },
+  "devDependencies": {
+    "jest-mock": "^29.7.0",
+    "jest-mock-axios": "^4.7.3"
   }
 }
